--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -17,7 +17,7 @@
   body,html{
     height:100%;
 }
-  body{
+  body, .dropdown-item{
       font-family: 'Audiowide';
       font-size: 15px;
       color: white;
@@ -41,7 +41,7 @@
   }
 
   .transparent-green{
-    background-color:rgba(0, 88, 0, 0.7);
+    background-color:rgba(84, 210, 1, .6);
     padding: 10%;
     min-height: 320px;
   }
@@ -73,11 +73,13 @@
 /********************************
 *************NAVBAR*************
 *********************************/
-.navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover .navbar-dark .navbar-nav .nav-link, .navbar-dark .navbar-nav .active>.nav-link, .navbar-dark .navbar-nav .nav-link.active, .navbar-dark .navbar-nav .nav-link.show, .navbar-dark .navbar-nav .show>.nav-link{
+
+.navbar-dark .navbar-nav .nav-link:hover .navbar-dark .navbar-nav .nav-link, .navbar-dark .navbar-nav .active>.nav-link, .navbar-dark .navbar-nav .nav-link.active, .navbar-dark .navbar-nav .nav-link.show, .navbar-dark .navbar-nav .show>.nav-link{
   color:white;
-  text-shadow: 2px 2px 4px #ffcc00;
+  border-bottom: 5px solid rgba(84, 210, 1, 1);
+  /*text-shadow: 2px 2px 4px rgba(84, 210, 1, 1);*/
 }
-.navbar-dark .navbar-nav .nav-link{
+.navbar-dark .navbar-nav .nav-link, .navbar-dark .navbar-nav .nav-link:focus{
   color: white;
 }
 
@@ -131,3 +133,16 @@
 		background: #0000FC;
 }
 
+
+/********************************
+*************DROPDOWN*************
+*********************************/
+
+.dropdown-menu{
+  background-color: black;
+}
+
+.dropdown-item:hover{
+  /*padding: .25em 0;*/
+  background-color: rgba(84, 210, 1, 1);
+}
