--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -22,6 +22,10 @@
       font-size: 15px;
       color: white;
   }
+  hr{
+    color: white;
+    border: 2px solid white;
+  }
   .font-xxl{
     font-size: 70px;
   }
@@ -33,7 +37,8 @@
   }
   
   #mainCarousel{
-    position:absolute; 
+    position:fixed; 
+    bottom: 0;
     z-index: -1;
   }
   #mainCarousel img{
@@ -70,11 +75,20 @@
   .form-control:-moz-placeholder { /* Firefox 18- */
     color: #d3d3d3;
   }
+  /********************************
+***************MODAL***************
+*********************************/
+.modal{
+  background-color:rgba(205, 22, 112, .6)
+}
+.modal-content{
+  background-color:rgba(84, 210, 1, .6);
+}
 /********************************
 *************NAVBAR*************
 *********************************/
 
-.navbar-dark .navbar-nav .nav-link:hover .navbar-dark .navbar-nav .nav-link, .navbar-dark .navbar-nav .active>.nav-link, .navbar-dark .navbar-nav .nav-link.active, .navbar-dark .navbar-nav .nav-link.show, .navbar-dark .navbar-nav .show>.nav-link{
+.navbar-dark .navbar-nav .nav-link .navbar-dark .navbar-nav .nav-link, .navbar-dark .navbar-nav .active>.nav-link, .navbar-dark .navbar-nav .nav-link.active, .navbar-dark .navbar-nav .nav-link.show, .navbar-dark .navbar-nav .show>.nav-link, .navbar-dark .navbar-nav .nav-link:hover{
   color:white;
   border-bottom: 5px solid rgba(84, 210, 1, 1);
   /*text-shadow: 2px 2px 4px rgba(84, 210, 1, 1);*/
@@ -87,7 +101,9 @@
 /********************************
 *************BUTTONS*************
 *********************************/
-
+button{
+  cursor: pointer !important;
+}
 .button {
 	background: #7C7C7C;
 	border-bottom: 4px inset rgba(0,0,0,.5);
@@ -96,15 +112,16 @@
 	border-top: 4px inset rgba(255,255,255,.5);
 	box-sizing: border-box;
 	color: white;
-	cursor: pointer;
+  cursor: pointer !important;
 	text-shadow: 0px 0px 5px #000;
-	text-transform: uppercase;
-	width: 100%;
+  text-transform: uppercase;
+  
 }
 .button:focus,
 .button:hover {
     background: #BCBCBC;
     color: white;
+    cursor: pointer !important;
 }
 
 .button.primary {
